[project]
name = "ente-import-watchdog"
version = "0.1.0"
description = "Restart Ente Photos automatically when long imports crash."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alejandro Akbal" }
]
keywords = ["ente", "photos", "watchdog", "google-takeout", "macos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/AlejandroAkbal/ente-import-watchdog"
Issues = "https://github.com/AlejandroAkbal/ente-import-watchdog/issues"

[project.scripts]
ente-import-watchdog = "ente_import_watchdog:main"
